fct python debug step 4

--- a/docs/docs/en/user/guides/i18n.md
+++ b/docs/docs/en/user/guides/i18n.md
@@ -24,10 +24,10 @@ Translator.enabled = true
 ## Enable multiple languages ​​for a bot
 
 It is possible to add and manage active languages ​​for a bot in the _NLU Applications_ section
-(in _Tock Studio_). See [_The Settings menu_](../../user/guides.md.md/studio.md.md/configuration).
+(in _Tock Studio_). See [_The Settings menu_](../../user/guides.md/studio.md/configuration).
 
 At any time in _Tock Studio_, it is possible to change the language selected in the banner at the top of the page,
-in particular to communicate with a bot in the _Test the bot_ interface. See [_General interface_](../../user/guides.md.md/studio.md.md/general).
+in particular to communicate with a bot in the _Test the bot_ interface. See [_General interface_](../../user/guides.md/studio.md/general).
 
 ## User language and *locale*
 
@@ -51,7 +51,7 @@ Finally, the default locale can be changed by a platform administrator, by passi
 
 In _Tock Studio_, the _Stories & Answers_ > _Answers_ section allows you to manage the labels of the bot's answers.
 
-See [_The Stories & Answers menu_](../../user/guides.md.md/studio.md.md/stories-and-answers).
+See [_The Stories & Answers menu_](../../user/guides.md/studio.md/stories-and-answers).
 
 Each label has a default value for each language of the bot.
 
@@ -78,4 +78,4 @@ For the moment, to consider a mass translation, we can for example:
 
 ## Develop with internationalization
 
-The [Tock developer manual](../../dev/i18n.md.md) gives more details on the development of multilingual bots.
+The [Tock developer manual](../../dev/i18n.md) gives more details on the development of multilingual bots.
