--- a/docs/docs/fr/user/guides/i18n.md
+++ b/docs/docs/fr/user/guides/i18n.md
@@ -25,10 +25,10 @@ est désactivée par défaut. Pour l'activer, il est alors nécessaire de config
 ## Activer plusieurs langues pour un bot
 
 Il est possible d'ajouter et de gérer les langues actives pour un bot dans la section _NLU Applications_
-(dans _Tock Studio_). Voir [_Le menu Settings_](../../user/guides.md.md/studio.md.md/configuration).
+(dans _Tock Studio_). Voir [_Le menu Settings_](../../user/guides.md/studio.md/configuration).
 
 A tout moment dans _Tock Studio_, il est possible de changer la langue sélectionnée dans la bannière en haut de page, 
-notamment pour dialoguer avec un bot dans l'interface _Test the bot_. Voir [_Interface générale_](../../user/guides.md.md/studio.md.md/general).
+notamment pour dialoguer avec un bot dans l'interface _Test the bot_. Voir [_Interface générale_](../../user/guides.md/studio.md/general).
 
 ## Langue et _locale_ utilisateur
 
@@ -51,7 +51,7 @@ Enfin, la locale par défaut peut être modifiée par un administrateur de la pl
 ## Traduire et faire varier les réponses du bot
 
 Dans _Tock Studio_, la section _Stories & Answers_ > _Answers_ permet de gérer les libellés des réponses du bot. 
-Voir [_Le menu Stories & Answers_](../../user/guides.md.md/studio.md.md/stories-and-answers).
+Voir [_Le menu Stories & Answers_](../../user/guides.md/studio.md/stories-and-answers).
 
 Chaque libellé a une valeur par défaut pour chaque langue du bot. 
 Il est possible de concevoir et configurer différentes variantes :
@@ -78,4 +78,4 @@ Pour le moment, pour envisager une traduction de masse, on peut par exemple :
 
 ## Développer avec l'internationalisation
 
-Le [manuel développeur Tock](../../dev/i18n.md.md) donne plus de détails sur le développement des bots multilingues.
+Le [manuel développeur Tock](../../dev/i18n.md) donne plus de détails sur le développement des bots multilingues.
